crates/toml/tests/snapshots/invalid/float/trailing-dot-plus.stderr
TOML parse error at line 1, column 24
  |
1 | trailing-dot-plus = +1.
  |                        ^
invalid fraction, expected digits
